<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="fragment"
            type="com.planner.feature.trips.fragment.AddTripFragment" />

        <variable
            name="viewModel"
            type="com.planner.feature.trips.viewmodel.TripsViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/add_trip_fragment"
        tools:context=".fragment.AddTripFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/image_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/trip_image"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:background="?attr/colorSurfaceVariant"
                    android:scaleType="centerCrop"
                    app:layout_constraintDimensionRatio="H,16:9"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:shapeAppearanceOverlay="@style/roundedImageView"
                    android:layout_margin="16dp"
                    tools:ignore="ContentDescription" />

                <Button
                    android:id="@+id/choose_image_button"
                    style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/choose_image"
                    android:onClick="@{() -> fragment.openPhotoPicker()}"
                    app:icon="@drawable/ic_add_image"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/trip_title"
                style="@style/Widget.Material3.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/trip_title"
                android:maxWidth="488dp"
                app:layout_constraintStart_toStartOf="@id/image_layout"
                android:layout_margin="16dp"
                app:layout_constraintTop_toBottomOf="@id/image_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/trip_title_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:importantForAutofill="no"
                    android:inputType="textCapWords"
                    android:singleLine="false" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/destination"
                style="@style/Widget.Material3.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/destination"
                android:maxWidth="488dp"
                app:layout_constraintStart_toStartOf="@id/image_layout"
                android:layout_margin="16dp"
                app:layout_constraintTop_toBottomOf="@id/trip_title">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/destination_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:importantForAutofill="no"
                    android:inputType="textCapWords"
                    android:singleLine="false" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/departure_date"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:clickable="false"
                android:hint="@string/departure_date"
                android:maxWidth="488dp"
                android:minWidth="50dp"
                app:endIconDrawable="@drawable/ic_calendar"
                app:endIconMode="custom"
                app:layout_constraintStart_toStartOf="@id/image_layout"
                android:layout_margin="16dp"
                app:layout_constraintTop_toBottomOf="@id/destination">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/departure_date_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:inputType="none"
                    android:onClick="@{() -> fragment.openDatePicker()}"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/contact_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/departure_date">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"
                    android:background="?attr/colorSurfaceVariant"
                    android:orientation="horizontal"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="8dp">

                    <TextView
                        style="@style/TextAppearance.Material3.TitleMedium"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/going" />

                    <Button
                        android:id="@+id/add_going"
                        style="@style/Widget.Material3.Button.TonalButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/add_people"
                        app:icon="@drawable/ic_add"
                        android:onClick="@{() -> fragment.openContactManager()}"/>
                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/going_contacts"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/contact_list_item" />
            </LinearLayout>

            <Button
                android:id="@+id/save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:enabled="@{ fragment.isButtonEnabled() }"
                android:onClick="@{() -> fragment.save()}"
                android:text="@string/save"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/contact_layout" />

            <Button
                android:id="@+id/cancel_button"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:onClick="@{() -> fragment.close()}"
                android:text="@string/close"
                app:layout_constraintEnd_toStartOf="@id/save_button"
                app:layout_constraintTop_toBottomOf="@id/contact_layout" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>