<resources>
    <string name="departure_date">Departure Date</string>
    <string name="destination">Destination</string>
    <string name="trip_title">Trip Title</string>
    <string name="choose_image">Choose image</string>
    <string name="add_a_trip">Plan a Trip</string>
    <string name="select_date">Select Date</string>
    <string name="trips">Trips</string>
    <string name="add_trip">Add a trip</string>
    <string name="image_description">%s trip\'s image</string>
    <string name="delete_question">Are you sure you want to delete this trip?</string>
    <string name="edit_trip">Edit Trip</string>
    <string name="add_new_trip">Add new trip</string>
    <string name="no_trips_planned_yet">No trips planned… yet!</string>
    <string name="going">Going</string>
    <string name="add_people">Add people</string>
</resources>