<resources>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="delete_sure">Are you sure?</string>
    <string name="close">Close</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="add">Add</string>
    <string name="title">Title</string>
    <string name="dot_divider">•</string>
    <plurals name="planning_x_trips">
        <item quantity="one">Planning 1 Trip</item>
        <item quantity="other">Planning %d Trips</item>
    </plurals>
    <plurals name="pending_x_tasks">
        <item quantity="one">1 Pending Task</item>
        <item quantity="other">%d Pending Tasks</item>
    </plurals>
    <string name="choose_contacts">Contacts</string>
</resources>